[package]
name = "example-macro"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
manyhow = {path = "../..", default-features = false}
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
trybuild = "1.0.80"

[package.metadata.release]
release = false
